--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="author" content="I.G.Khalilov" />
+    <meta name="robots" content="noindex,follow" />
+    <meta name="discription" content="QPICK E-market react app" />
+    <meta name="keywords" content="QPICK, E-market, Е-commerce, commerce, market" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta name="Address" content="Россия, Самара" />
+    <meta property="og:title" content="QPICK E-market" />
+    <meta property="og:description" content="QPICK E-market react app" />
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="QPICK E-market" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@paul.gabow" />
+    <meta name="twitter:title" content="QPICK E-market" />
+    <meta name="twitter:description" content="QPICK E-market react app" />
     
     <title>QPICK</title>
   </head>
